Timetable based revision implemented